syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "base/common.proto";
option csharp_namespace = "aries.galileo.grpc";
package aries;

// 搜索请求项
message SearchReq {
   string Keyword=1;
   repeated EsQueryItemField KeywordFields=3;
   repeated EsQueryItemField PhraseFields=4;
   google.protobuf.Int32Value PhraseSlop=5;
   google.protobuf.DoubleValue Boost=6;
   repeated string HighlightFields=7;
   AriesPage Page=2;
   repeated EsSortField SortFields=8;
}
//搜索请求项（按分类）
message SearchByIndexReq{
  string Keyword=1;
  repeated EsQueryItemField KeywordFields=4;
  repeated EsQueryItemField PhraseFields=5;
  google.protobuf.Int32Value PhraseSlop=6;
  google.protobuf.DoubleValue Boost=7;
  repeated string HighlightFields=8;
  string Index=2;
  AriesPage Page=3;
  repeated EsSortField SortFields=9;
}
message EsQueryItemField{
  string Item=1;
  double Boost=2;
}
message EsSortField{
  string Sort=1;
  int32 SortType=2;
}
message SuggesterReq{
	string Keyword=1;
    string Name=2;
    string Prefix=3;
    string Field=4;
	google.protobuf.Int32Value Size=5;
    repeated string Index=6;
    google.protobuf.Int32Value FuzzyEditDistance=7;
}

message TopReq{
  int32 Top=1;
}